--- a/QuanLyKhachSan/src/com/exemple/views/QuanLyDatPhongJPanel.form
+++ b/QuanLyKhachSan/src/com/exemple/views/QuanLyDatPhongJPanel.form
@@ -604,7 +604,7 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jLabel19" max="32767" attributes="0"/>
-                                      <Component id="txtNgaySinh" max="32767" attributes="0"/>
+                                      <Component id="txtNgaySinh" pref="20" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
