update order dich vu

--- a/QuanLyKhachSan/src/test/newReport.jrxml
+++ b/QuanLyKhachSan/src/test/newReport.jrxml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7c3b2f34-c376-4fa1-bb81-8e2aad65b402">
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="SoPhong" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[302]]></defaultValueExpression>
 	</parameter>
+	<queryString>
+		<![CDATA[SELECT
+     ChiTietHoaDon."MaChiTietHoaDon" AS ChiTietHoaDon_MaChiTietHoaDon,
+     ChiTietHoaDon."MaPhong" AS ChiTietHoaDon_MaPhong,
+     ChiTietHoaDon."MaHoaDon" AS ChiTietHoaDon_MaHoaDon,
+     KhachHang."TenKhachHang" AS KhachHang_TenKhachHang,
+     Phong."SoPhong" AS Phong_SoPhong
+FROM
+     "dbo"."KhachHang" KhachHang INNER JOIN "dbo"."HoaDon" HoaDon ON KhachHang."SoCMTKhachHang" = HoaDon."SoCMTKhachHang"
+     INNER JOIN "dbo"."ChiTietHoaDon" ChiTietHoaDon ON HoaDon."MaHoaDon" = ChiTietHoaDon."MaHoaDon"
+     INNER JOIN "dbo"."Phong" Phong ON ChiTietHoaDon."MaPhong" = Phong."MaPhong"
+WHERE
+     SoPhong = $P{SoPhong}]]>
+	</queryString>
+	<field name="ChiTietHoaDon_MaChiTietHoaDon" class="java.lang.Integer"/>
+	<field name="ChiTietHoaDon_MaPhong" class="java.lang.Integer"/>
+	<field name="ChiTietHoaDon_MaHoaDon" class="java.lang.Integer"/>
+	<field name="KhachHang_TenKhachHang" class="java.lang.String"/>
+	<field name="Phong_SoPhong" class="java.lang.Integer"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
